# unit-conversion

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
src/: lib.rs  main.rs
src/config/: mod.rs
src/errors/: mod.rs
src/models/: init.rs  mod.rs  registry.rs  unit.rs
src/models/units/: area.rs  energy.rs  length.rs  mass.rs  mod.rs  power.rs  pressure.rs  speed.rs  temperature.rs  time.rs  volume.rs
src/routes/: conversion.rs  mod.rs
src/services/: conversion.rs  mod.rs
tests/: area_test.rs  energy_test.rs  length_test.rs  mass_test.rs  power_test.rs  pressure_test.rs  speed_test.rs  temperature_test.rs  time_test.rs  unit_test.rs  volume_test.rs
