[package]
name = "unit-conversion-api"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A minimal Actix Web API for unit conversion microservice"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
config = "0.13"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.18"

[dev-dependencies]
actix-rt = "2.9"
